@@ -88,6 +88,7 @@
  * #882 (RandomMixture segfaults with Dirac)
  * #883 (VisualTest.DrawHistogram should rely on Histogram.drawPDF)
  * #887 (Bogus PDF evaluation in RandomMixture with mix of continuous/discrete variables)
+ * #888 (Bogus RandomMixture::getSample)
 
 == 1.8 release (2016-11-18) == #release-1.8
 
